fix: minnor alignment fixes at frontpage

--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -11,7 +11,7 @@
 #loginform{
     text-align: center;
     position:fixed;
-    bottom: 500px; ;
+    bottom: 400px; ;
     right: 750px; ;
     width: 300px;
     border: 3px solid rgb(166, 6, 180);
